--- a/src/components/weakness-list/style.css
+++ b/src/components/weakness-list/style.css
@@ -1,6 +1,2 @@
 .element-table{
-    font-size: 11pt;
-    margin: 0 auto;
-    padding: 0.5em 0 0 0em;
-    /* padding-left: 20px; */
 }
